[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Sprite.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.9482, 18.8366 )

[sub_resource type="Animation" id=2]
resource_name = "down"
length = 0.8

[sub_resource type="Animation" id=3]
resource_name = "left"
length = 0.8

[sub_resource type="Animation" id=4]
resource_name = "right"
length = 0.8

[sub_resource type="Animation" id=5]
resource_name = "up"
length = 0.8

[node name="Character" type="Node2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.601395, 0.0769196 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/down = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 5 )

[node name="MoveTween" type="Tween" parent="."]

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -32 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -32, 0 )

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 0 )

[node name="Sprite" parent="." instance=ExtResource( 2 )]
[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]
